--- a/index.html
+++ b/index.html
@@ -83,9 +83,10 @@
 
 
 <!-- Sonidos -->
-<audio id="add-sound" src="sounds/add.mp3"></audio>
-<audio id="remove-sound" src="sounds/remove.mp3"></audio>
+<audio id="add-sound" src="sadd.mp3"></audio>
+<audio id="remove-sound" src="remove.mp3"></audio>
 
 <script src="script.js"></script>
 </body>
 </html>
+
