Fix sound file names in index.html
Updated sound file names for add and remove actions.

--- a/index.html
+++ b/index.html
@@ -83,10 +83,11 @@
 
 
 <!-- Sonidos -->
-<audio id="add-sound" src="sadd.mp3"></audio>
+<audio id="add-sound" src="add.mp3"></audio>
 <audio id="remove-sound" src="remove.mp3"></audio>
 
 <script src="script.js"></script>
 </body>
 </html>
+
 
